# qnode

./: .qrc  cdp.pyproject  main.py  pyproject.toml
idf/: README.md  pubspec.yaml
idf/android/app/: build.gradle
idf/android/app/src/main/: AndroidManifest.xml
idf/android/app/src/main/kotlin/com/example/idf/: MainActivity.kt
idf/android/app/src/profile/: AndroidManifest.xml
idf/ios/Runner/: Info.plist
idf/ios/Runner.xcodeproj/: project.pbxproj
idf/test/: widget_test.dart
idf/web/: index.html  manifest.json
idf/windows/: CMakeLists.txt
idf/windows/runner/: main.cpp
idp/: app.py
idp/data/: db.py
idp/ui/: window.py
qml/: Doc.qml  Home.qml  Splash.qml  main.qml
qml/comp/: CalendarView.qml  CenterTooltip.qml  CustomButton.qml  Editor.qml  EditorView.qml  MenuBarView.qml  TriToolbar.qml
qml/models/: Tag.qml
qml/pages/: Edit.qml
qml/windows/: Preferences.qml
